--- a/frontend/src/theme/variables.scss
+++ b/frontend/src/theme/variables.scss
@@ -1,2 +1,65 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+:root {
+  /* Your color palette */
+  --ion-color-primary: #7b2dd3;
+  --ion-color-primary-rgb: 123,45,211;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #6c28ba;
+  --ion-color-primary-tint: #8842d7;
+
+  --ion-color-secondary: #a5579d;
+  --ion-color-secondary-rgb: 165,87,157;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #914d8a;
+  --ion-color-secondary-tint: #ae68a7;
+
+  --ion-color-tertiary: #4402b9;
+  --ion-color-tertiary-rgb: 68,2,185;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #3c02a3;
+  --ion-color-tertiary-tint: #571bc0;
+
+  --ion-color-success: #5b9270;
+  --ion-color-success-rgb: 91,146,112;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255,255,255;
+  --ion-color-success-shade: #508063;
+  --ion-color-success-tint: #6b9d7e;
+
+  --ion-color-warning: #fb9803;
+  --ion-color-warning-rgb: 251,152,3;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #dd8603;
+  --ion-color-warning-tint: #fba21c;
+
+  --ion-color-danger: #e672ff;
+  --ion-color-danger-rgb: 230,114,255;
+  --ion-color-danger-contrast: #000000;
+  --ion-color-danger-contrast-rgb: 0,0,0;
+  --ion-color-danger-shade: #ca64e0;
+  --ion-color-danger-tint: #e980ff;
+
+  --ion-color-dark: #18134b;
+  --ion-color-dark-rgb: 24,19,75;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #151142;
+  --ion-color-dark-tint: #2f2b5d;
+
+  --ion-color-medium: #ffe096;
+  --ion-color-medium-rgb: 255,224,150;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #e0c584;
+  --ion-color-medium-tint: #ffe3a1;
+
+  --ion-color-light: #ffffff;
+  --ion-color-light-rgb: 255,255,255;
+  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #e0e0e0;
+  --ion-color-light-tint: #ffffff;
+}
