--- a/FrontendAdmin/src/app/admin/users/user-form/user-form.component.html
+++ b/FrontendAdmin/src/app/admin/users/user-form/user-form.component.html
@@ -47,6 +47,21 @@
       </div>
     </div>
 
+    <div class="form-group" *ngIf="!user">
+      <label for="password">Password</label>
+      <input 
+        type="password" 
+        id="password" 
+        formControlName="password" 
+        class="form-control"
+        [class.is-invalid]="userForm.get('password')?.invalid && userForm.get('password')?.touched"
+      >
+      <div class="invalid-feedback" *ngIf="userForm.get('password')?.invalid && userForm.get('password')?.touched">
+        <span *ngIf="userForm.get('password')?.errors?.['required']">Password is required</span>
+        <span *ngIf="userForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters</span>
+      </div>
+    </div>
+
     <div class="form-group">
       <label for="phone">Phone</label>
       <input 
