--- a/frontend/src/app/client/services/services.page.html
+++ b/frontend/src/app/client/services/services.page.html
@@ -15,6 +15,12 @@
       <ion-card-content>
         <p>{{ service.description }}</p>
         <p class="details">{{ service.servicedetail }}</p>
+        <div class="service-actions">
+          <ion-button expand="block" color="primary" [routerLink]="['/client/reservations/new']" [queryParams]="{ serviceId: service.idservice }">
+            <ion-icon name="calendar-outline" slot="start"></ion-icon>
+            Réserver
+          </ion-button>
+        </div>
       </ion-card-content>
     </ion-card>
 
