--- a/frontend/src/app/client/services/services.page.html
+++ b/frontend/src/app/client/services/services.page.html
@@ -10,7 +10,7 @@
     <ion-card *ngFor="let service of services">
       <ion-card-header>
         <ion-card-title>{{ service.nomservice }}</ion-card-title>
-        <ion-card-subtitle>{{ service.prixService | currency:'EUR':'symbol':'1.2-2' }}</ion-card-subtitle>
+        <ion-card-subtitle>{{ service.prixService | currency:'TND':'symbol':'1.2-2' }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <p>{{ service.description }}</p>
