--- a/frontend/src/app/provider/dashboard/dashboard.page.html
+++ b/frontend/src/app/provider/dashboard/dashboard.page.html
@@ -38,7 +38,7 @@
             <div class="services-list">
               <div *ngFor="let service of services.slice(0, 3)" class="service-item">
                 <div class="service-name">{{ service.nomservice }}</div>
-                <div class="service-price">{{ service.prixService | currency:'EUR':'symbol':'1.2-2' }}</div>
+                <div class="service-price">{{ service.prixService | currency:'TND':'symbol':'1.2-2' }}</div>
               </div>
               <div *ngIf="services.length > 3" class="more-services">
                 <ion-button fill="clear" size="small" routerLink="/provider/services">
